--- a/index.html
+++ b/index.html
@@ -1,11 +1,161 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    Привіт світ
-</body>
+<html lang="uk">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE-edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Сучасна пекарня</title>
+  </head>
+  <body>
+    <!--header-->
+    <header>
+      <nav>
+        <a href="./index.html">
+          <img src="./img/logo.svg" alt="Логотип Сучасної пекарні" />
+        </a>
+        <ul>
+          <li><a href="#taditions-section">Наші традиції</a></li>
+          <li><a href="#chefs-section">Шеф-кухарі</a></li>
+          <li><a href="#formats-section">Формати</a></li>
+          <li><a href="#contact-section">Контакти</a></li>
+        </ul>
+      </nav>
+      <button type="button">Замовити дзвінок</button>
+    </header>
+    <!--main body of the site-->
+    <main>
+      <!--section1-->
+      <section>
+        <h1><span>Сучасна</span> пекарня</h1>
+      </section>
+      <!--section2-->
+      <section id="taditions-section">
+        <ul>
+          <li>Великий попит на ринку</li>
+          <li>Доступні за бюджетом формати</li>
+          <li>Досвідчена управлінська команда</li>
+        </ul>
+        <h2>Новий формат традицій</h2>
+        <p>
+          <span>shop bakery</span> — це пекарня, яка взяла все найкраще, і
+          зберегла смак традиційної випічки та натуральність інгредієнтів.
+        </p>
+        <p>
+          Ми працюємо як найвідоміші мережі—
+          <span>5 хвилин і замовлення готове. </span>
+          А ще у наших пекарень стильний дизайн та висока якість обслуговування!
+        </p>
+        <img
+          src="./img/bakerman.jpg"
+          alt="Чоловік пекар біля стелажей з випічкою"
+        />
+      </section>
+      <!--section3-->
+      <section id="chefs-section">
+        <h2>Наші найкращі <span>шеф -кухарі</span></h2>
+        <ul>
+          <li>
+            <article>
+              <h3>Настя</h3>
+              <p>Привіт, я Настя!</p>
+              <p>Вже 10 років, я свтілюю у життя цікаві та смачні ідеї.</p>
+              <p>Я випічу для вас найсмачніщі вироби!</p>
+            </article>
+          </li>
+          <li>
+            <article>
+              <h3>Влад</h3>
+              <p>Привіт, я Влад!</p>
+              <p>
+                Мій кодитерський стаж вже 18 років.SHOP BEKERY - це наша любов,
+                з якою ми ділимось кожен раз з Вами через нашу випічку!
+              </p>
+              <p>Я зроблю для вас унікальну начинку на будь який смак!</p>
+            </article>
+          </li>
+        </ul>
+      </section>
+      <!--section4-->
+      <section id="formats-section">
+        <h2>Формати</h2>
+        <ul>
+          <li>
+            <article>
+              <h3 lang="en">Walrus</h3>
+              <p>Площа: до 120 м2</p>
+              <p>Меню: розширене меню</p>
+              <p>
+                Штат: 2 продавці-касири, 2 пекарі, 2 помічники пекаря, 2
+                офіціанти-різнороби
+              </p>
+              <p>Посадкові місця: є</p>
+            </article>
+          </li>
+          <li>
+            <article>
+              <h3 lang="en">Horseshoe</h3>
+              <p>Площа: до 25 м2</p>
+              <p>Меню: найпопулярніші позиції меню</p>
+              <p>Штат: 2 продавці-касири, 2 пекарі, 1 помічник пекаря</p>
+              <p>Посадкові місця: відсутні</p>
+            </article>
+          </li>
+          <li>
+            <article>
+              <h3 lang="en">Handlebar</h3>
+              <p>Площа: до 15 м2</p>
+              <p>Меню: найпопулярніші позиції меню</p>
+              <p>Штат: 1 продавець, 1 пекар, 1 помічник пекаря</p>
+              <p>Посадкові місця: відсутні</p>
+            </article>
+          </li>
+        </ul>
+      </section>
+      <!--section5-->
+      <section id="contact-section">
+        <h2>Приєднуйся до мережі пекарень</h2>
+        <p>Заповни форму, щоб ми звʼязались з тобою!</p>
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2540.1640531314047!2d30.491233500000003!3d50.4566697!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4ce637bfe1717%3A0x5370c2254ad1b952!2z0LLRg9C70LjRhtGPINCh0ZbRh9C-0LLQuNGFINCh0YLRgNGW0LvRjNGG0ZbQsiwgNTQsINCa0LjRl9CyLCAwMjAwMA!5e0!3m2!1suk!2sua!4v1702025392116!5m2!1suk!2sua"
+          width="603"
+          height="595"
+          style="border: 0"
+          allowfullscreen=""
+          loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade"
+        ></iframe>
+      </section>
+    </main>
+    <!--footer-->
+    <footer>
+      <nav>
+        <a href="./index.html">
+          <img src="./img/logo.svg" alt="Логотип Сучасної пекарні" />
+        </a>
+        <ul>
+          <li><a href="#taditions-section">Наші традиції</a></li>
+          <li><a href="#chefs-section">Шеф-кухарі</a></li>
+          <li><a href="#formats-section">Формати</a></li>
+          <li><a href="#contact-section">Контакти</a></li>
+        </ul>
+      </nav>
+      <address>
+        <ul>
+          <li><a href="tel:+380960000007">+ 38 (096) 000 00 07</a></li>
+          <li>
+            <a href="mailto:shopbakery@gmail.com">shopbakery@gmail.com</a>
+          </li>
+          <li>
+            <a href="https://maps.app.goo.gl/GgAnGCB2JnojJNKF9" target="_blank">
+              Україна, м. Київ, вул. Січових Стрільців 54
+            </a>
+          </li>
+          <li><a href="#">facebook</a></li>
+          <li><a href="#">inst</a></li>
+        </ul>
+        <a href="#" target="_blank">Політика конфіденційності</a>
+        <p>&copy; 2022 Дані захищені</p>
+      </address>
+    </footer>
+  </body>
 </html>
